# FFMultiCrop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: FFMultiCrop.h
python/: FFMCPybind11.cpp  __init__.py.in  setup.py.in
source/: FFMC.cpp
test/: FFMCTest.cpp
